--- a/babylon-vue/public/index.html
+++ b/babylon-vue/public/index.html
@@ -9,6 +9,15 @@
     <script src="https://preview.babylonjs.com/babylon.js"></script>
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+    <style>
+      html, body {
+          overflow: hidden;
+          width: 100%;
+          height: 100%;
+          margin: 0;
+          padding: 0;
+      }
+    </style>
 </head>
   <body>
     <div id="app"></div>
