--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <a-scene background="color: black" fog="type: exponential; color: black; density: 0.01">
       <a-camera position="0 0 2"></a-camera>
-      <a-box metalness="0.9" roughness="0.7" color="#7A7"></a-box>
+      <a-entity animation="property: rotation; to: 0 0 360; loop: true; dur: 30000; easing: linear">
+        <a-entity animation="property: rotation; to: 0 360 0; loop: true; dur: 60000; easing: linear">
+          <a-box metalness="0.9" roughness="0.7" color="#7A7"></a-box>
+        </a-entity>
+      </a-entity>
     </a-scene>
   </body>
 </html>
